--- a/ChessApp/MainWindow.xaml
+++ b/ChessApp/MainWindow.xaml
@@ -5,8 +5,73 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ChessApp"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="700" Width="800">
     <Grid>
-        
+        <Button x:Name="a8" Content="" HorizontalAlignment="Left" Height="60" Margin="80,80,0,0" VerticalAlignment="Top" Width="60" Click="A8_Click"/>
+        <Button x:Name="b8" Content="" HorizontalAlignment="Left" Height="60" Margin="140,80,0,0" VerticalAlignment="Top" Width="60"/>
+        <Button x:Name="c8" Content="" HorizontalAlignment="Left" Height="60" Margin="200,80,0,0" VerticalAlignment="Top" Width="60"/>
+        <Button x:Name="d8" Content="" HorizontalAlignment="Left" Height="60" Margin="260,80,0,0" VerticalAlignment="Top" Width="60"/>
+        <Button x:Name="e8" Content="" HorizontalAlignment="Left" Height="60" Margin="320,80,0,0" VerticalAlignment="Top" Width="60"/>
+        <Button x:Name="f8" Content="" HorizontalAlignment="Left" Height="60" Margin="380,80,0,0" VerticalAlignment="Top" Width="60"/>
+        <Button x:Name="g8" Content="" HorizontalAlignment="Left" Height="60" Margin="440,80,0,0" VerticalAlignment="Top" Width="60"/>
+        <Button x:Name="h8" Content="" HorizontalAlignment="Left" Height="60" Margin="500,80,0,0" VerticalAlignment="Top" Width="60" Click="Button_Click"/>
+        <Button Content="" HorizontalAlignment="Left" Height="60" Margin="80,140,0,0" VerticalAlignment="Top" Width="60"/>
+        <Button Content="" HorizontalAlignment="Left" Height="60" Margin="140,140,0,0" VerticalAlignment="Top" Width="60"/>
+        <Button Content="" HorizontalAlignment="Left" Height="60" Margin="200,140,0,0" VerticalAlignment="Top" Width="60"/>
+        <Button Content="" HorizontalAlignment="Left" Height="60" Margin="260,140,0,0" VerticalAlignment="Top" Width="60"/>
+        <Button Content="" HorizontalAlignment="Left" Height="60" Margin="320,140,0,0" VerticalAlignment="Top" Width="60"/>
+        <Button Content="" HorizontalAlignment="Left" Height="60" Margin="380,140,0,0" VerticalAlignment="Top" Width="60"/>
+        <Button Content="" HorizontalAlignment="Left" Height="60" Margin="440,140,0,0" VerticalAlignment="Top" Width="60"/>
+        <Button Content="" HorizontalAlignment="Left" Height="60" Margin="500,140,0,0" VerticalAlignment="Top" Width="60"/>
+        <Button Content="" HorizontalAlignment="Left" Height="60" Margin="80,200,0,0" VerticalAlignment="Top" Width="60"/>
+        <Button Content="" HorizontalAlignment="Left" Height="60" Margin="140,200,0,0" VerticalAlignment="Top" Width="60"/>
+        <Button Content="" HorizontalAlignment="Left" Height="60" Margin="200,200,0,0" VerticalAlignment="Top" Width="60"/>
+        <Button Content="" HorizontalAlignment="Left" Height="60" Margin="260,200,0,0" VerticalAlignment="Top" Width="60"/>
+        <Button Content="" HorizontalAlignment="Left" Height="60" Margin="320,200,0,0" VerticalAlignment="Top" Width="60"/>
+        <Button Content="" HorizontalAlignment="Left" Height="60" Margin="380,200,0,0" VerticalAlignment="Top" Width="60"/>
+        <Button Content="" HorizontalAlignment="Left" Height="60" Margin="440,200,0,0" VerticalAlignment="Top" Width="60"/>
+        <Button Content="" HorizontalAlignment="Left" Height="60" Margin="500,200,0,0" VerticalAlignment="Top" Width="60"/>
+        <Button Content="" HorizontalAlignment="Left" Height="60" Margin="80,260,0,0" VerticalAlignment="Top" Width="60"/>
+        <Button Content="" HorizontalAlignment="Left" Height="60" Margin="140,260,0,0" VerticalAlignment="Top" Width="60"/>
+        <Button Content="" HorizontalAlignment="Left" Height="60" Margin="200,260,0,0" VerticalAlignment="Top" Width="60"/>
+        <Button Content="" HorizontalAlignment="Left" Height="60" Margin="260,260,0,0" VerticalAlignment="Top" Width="60"/>
+        <Button Content="" HorizontalAlignment="Left" Height="60" Margin="320,260,0,0" VerticalAlignment="Top" Width="60"/>
+        <Button Content="" HorizontalAlignment="Left" Height="60" Margin="380,260,0,0" VerticalAlignment="Top" Width="60"/>
+        <Button Content="" HorizontalAlignment="Left" Height="60" Margin="440,260,0,0" VerticalAlignment="Top" Width="60"/>
+        <Button Content="" HorizontalAlignment="Left" Height="60" Margin="500,260,0,0" VerticalAlignment="Top" Width="60"/>
+        <Button Content="" HorizontalAlignment="Left" Height="60" Margin="80,320,0,0" VerticalAlignment="Top" Width="60"/>
+        <Button Content="" HorizontalAlignment="Left" Height="60" Margin="140,320,0,0" VerticalAlignment="Top" Width="60"/>
+        <Button Content="" HorizontalAlignment="Left" Height="60" Margin="200,320,0,0" VerticalAlignment="Top" Width="60"/>
+        <Button Content="" HorizontalAlignment="Left" Height="60" Margin="260,320,0,0" VerticalAlignment="Top" Width="60"/>
+        <Button Content="" HorizontalAlignment="Left" Height="60" Margin="320,320,0,0" VerticalAlignment="Top" Width="60"/>
+        <Button Content="" HorizontalAlignment="Left" Height="60" Margin="380,320,0,0" VerticalAlignment="Top" Width="60"/>
+        <Button Content="" HorizontalAlignment="Left" Height="60" Margin="440,320,0,0" VerticalAlignment="Top" Width="60"/>
+        <Button Content="" HorizontalAlignment="Left" Height="60" Margin="500,320,0,0" VerticalAlignment="Top" Width="60"/>
+        <Button Content="" HorizontalAlignment="Left" Height="60" Margin="80,380,0,-20" VerticalAlignment="Top" Width="60"/>
+        <Button Content="" HorizontalAlignment="Left" Height="60" Margin="140,380,0,-20" VerticalAlignment="Top" Width="60"/>
+        <Button Content="" HorizontalAlignment="Left" Height="60" Margin="200,380,0,-20" VerticalAlignment="Top" Width="60"/>
+        <Button Content="" HorizontalAlignment="Left" Height="60" Margin="260,380,0,-20" VerticalAlignment="Top" Width="60"/>
+        <Button Content="" HorizontalAlignment="Left" Height="60" Margin="320,380,0,-20" VerticalAlignment="Top" Width="60"/>
+        <Button Content="" HorizontalAlignment="Left" Height="60" Margin="380,380,0,-20" VerticalAlignment="Top" Width="60"/>
+        <Button Content="" HorizontalAlignment="Left" Height="60" Margin="440,380,0,-20" VerticalAlignment="Top" Width="60"/>
+        <Button Content="" HorizontalAlignment="Left" Height="60" Margin="500,380,0,-20" VerticalAlignment="Top" Width="60"/>
+        <Button x:Name="a2" Content="" HorizontalAlignment="Left" Height="60" Margin="80,440,0,0" VerticalAlignment="Top" Width="60"/>
+        <Button x:Name="b2" HorizontalAlignment="Left" Height="60" Margin="140,440,0,0" VerticalAlignment="Top" Width="60"/>
+        <Button x:Name="c2" HorizontalAlignment="Left" Height="60" Margin="200,440,0,0" VerticalAlignment="Top" Width="60"/>
+        <Button x:Name="d2" HorizontalAlignment="Left" Height="60" Margin="260,440,0,0" VerticalAlignment="Top" Width="60"/>
+        <Button Content="" HorizontalAlignment="Left" Height="60" Margin="320,440,0,0" VerticalAlignment="Top" Width="60"/>
+        <Button Content="" HorizontalAlignment="Left" Height="60" Margin="380,440,0,0" VerticalAlignment="Top" Width="60"/>
+        <Button Content="" HorizontalAlignment="Left" Height="60" Margin="440,440,0,0" VerticalAlignment="Top" Width="60"/>
+        <Button Content="" HorizontalAlignment="Left" Height="60" Margin="500,440,0,0" VerticalAlignment="Top" Width="60"/>
+        <Button x:Name="a1" Content="" HorizontalAlignment="Left" Height="60" Margin="80,500,0,0" VerticalAlignment="Top" Width="60"/>
+        <Button x:Name="b1" Content="" HorizontalAlignment="Left" Height="60" Margin="140,500,0,0" VerticalAlignment="Top" Width="60"/>
+        <Button x:Name="c1" Content="" HorizontalAlignment="Left" Height="60" Margin="200,500,0,0" VerticalAlignment="Top" Width="60"/>
+        <Button x:Name="d1" Content="" HorizontalAlignment="Left" Height="60" Margin="260,500,0,0" VerticalAlignment="Top" Width="60"/>
+        <Button x:Name="e1" Content="" HorizontalAlignment="Left" Height="60" Margin="320,500,0,0" VerticalAlignment="Top" Width="60"/>
+        <Button x:Name="f1" Content="" HorizontalAlignment="Left" Height="60" Margin="380,500,0,0" VerticalAlignment="Top" Width="60"/>
+        <Button x:Name="g1" Content="" HorizontalAlignment="Left" Height="60" Margin="440,500,0,0" VerticalAlignment="Top" Width="60"/>
+        <Button x:Name="h1" Content="" HorizontalAlignment="Left" Height="60" Margin="500,500,0,0" VerticalAlignment="Top" Width="60"/>
+
+
     </Grid>
 </Window>
